header structure, config.yml changed

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
-  name: ModernSimple
+  name: github
+  repo: mateki0/ModernSimple
 media_folder: static/assets
 public_folder: /assets
 collections:
