--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,11 @@
 {
-  "arrowParens": "always",
-  "semi": false,
-  "trailingComma": "all",
+  "semi": true,
   "tabWidth": 2,
+  "printWidth": 100,
   "singleQuote": true,
-  "bracketSpacing": true
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
