--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-svgr": "^2.0.2",
+    "gatsby-plugin-typography": "^2.5.12",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
     "netlify-cms-app": "^2.12.24",
@@ -23,8 +24,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-typography": "^0.16.19",
     "styled-components": "^5.2.0",
-    "typeface-nunito": "^1.1.3"
+    "typeface-nunito": "^1.1.3",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.3",
