--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "ModernSimple",
+  "name": "modernsimple",
   "private": true,
   "description": "Professional graphic desginer portfolio",
   "version": "0.1.0",
   "author": "Mateusz Bętka <mateki079@gmail.com>",
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
+    "babel-preset-gatsby": "^0.5.12",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-image-background-slider": "0.0.4",
