--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Mateusz Bętka <mateki079@gmail.com>",
   "dependencies": {
     "@svgr/webpack": "^5.4.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-gatsby": "^0.5.12",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
@@ -13,11 +14,11 @@
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-netlify-cms": "^4.3.14",
     "gatsby-plugin-offline": "^3.2.28",
+    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-plugin-typography": "^2.5.12",
     "gatsby-source-filesystem": "^2.3.30",
     "gatsby-transformer-sharp": "^2.5.15",
     "netlify-cms-app": "^2.12.24",
@@ -25,10 +26,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
-    "react-typography": "^0.16.19",
-    "styled-components": "^5.2.0",
-    "typeface-nunito": "^1.1.3",
-    "typography": "^0.16.19"
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.3",
