--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-image": "^2.4.19",
     "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-manifest": "^2.4.30",
+    "gatsby-plugin-netlify": "^2.3.16",
     "gatsby-plugin-netlify-cms": "^4.3.14",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
