--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@svgr/webpack": "^5.4.0",
     "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-gatsby": "^0.5.12",
+    "esm": "^3.2.25",
     "gatsby": "^2.24.63",
     "gatsby-image": "^2.4.19",
     "gatsby-image-background-slider": "0.0.4",
@@ -21,9 +22,16 @@
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-plugin-svgr": "^2.0.2",
+    "gatsby-remark-copy-linked-files": "^2.3.19",
+    "gatsby-remark-images": "^3.3.33",
+    "gatsby-remark-prismjs": "^3.5.16",
+    "gatsby-remark-responsive-iframe": "^2.4.17",
+    "gatsby-remark-smartypants": "^2.3.13",
     "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.15",
     "netlify-cms-app": "^2.12.24",
+    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
