--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "gatsby-plugin-sharp": "^2.6.36",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-plugin-svgr": "^2.0.2",
+    "gatsby-remark-images": "^3.3.33",
     "gatsby-source-filesystem": "^2.3.30",
+    "gatsby-transformer-remark": "^2.8.38",
     "gatsby-transformer-sharp": "^2.5.15",
     "netlify-cms-app": "^2.12.24",
     "prop-types": "^15.7.2",
