--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bnb-gallery": "^1.4.4",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-modal": "^3.11.2",
