--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-preset-gatsby": "^0.5.12",
     "esm": "^3.2.25",
     "gatsby": "^2.24.63",
+    "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
     "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-manifest": "^2.4.30",
