--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-gatsby": "^0.5.12",
     "esm": "^3.2.25",
+    "final-form": "^4.20.1",
     "gatsby": "^2.24.63",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
@@ -33,8 +34,12 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-final-form": "^6.5.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0"
+    "react-hook-form": "^6.9.2",
+    "styled-components": "^5.2.0",
+    "yup": "^0.29.3",
+    "yup-phone": "^1.2.10"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.3",
@@ -42,6 +47,7 @@
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
     "@types/styled-components": "^5.1.3",
+    "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "eslint": "^7.9.0",
