--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Mateusz Bętka <mateki079@gmail.com>",
   "dependencies": {
+    "@browniebroke/gatsby-image-gallery": "^4.0.0",
     "@svgr/webpack": "^5.4.0",
     "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-gatsby": "^0.5.12",
@@ -22,6 +23,7 @@
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.6.36",
+    "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-plugin-svgr": "^2.0.2",
     "gatsby-remark-images": "^3.3.33",
