--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Mateusz Bętka <mateki079@gmail.com>",
   "dependencies": {
+    "@reach/dialog": "^0.11.2",
+    "@reach/tabs": "^0.11.2",
+    "@reach/visually-hidden": "^0.11.1",
     "@svgr/webpack": "^5.4.0",
     "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-gatsby": "^0.5.12",
@@ -39,6 +42,7 @@
     "react-final-form": "^6.5.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.9.2",
+    "react-netlify-identity-widget": "^0.2.7",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3",
     "yup-phone": "^1.2.10"
