--- a/package.json
+++ b/package.json
@@ -6,22 +6,16 @@
   "author": "Mateusz Bętka <mateki079@gmail.com>",
   "dependencies": {
     "@browniebroke/gatsby-image-gallery": "^4.0.0",
-    "@reach/dialog": "^0.11.2",
-    "@reach/tabs": "^0.11.2",
-    "@reach/visually-hidden": "^0.11.1",
     "@svgr/webpack": "^5.4.0",
     "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-gatsby": "^0.5.12",
     "esm": "^3.2.25",
-    "final-form": "^4.20.1",
-    "gatsby": "^2.24.63",
+    "gatsby": "^2.24.80",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
-    "gatsby-image-background-slider": "0.0.4",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-netlify": "^2.3.16",
     "gatsby-plugin-netlify-cms": "^4.3.14",
-    "gatsby-plugin-netlify-identity": "0.0.3",
     "gatsby-plugin-offline": "^3.2.28",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.11",
@@ -31,23 +25,19 @@
     "gatsby-plugin-sitemap": "^2.4.17",
     "gatsby-plugin-styled-components": "^3.3.12",
     "gatsby-plugin-svgr": "^2.0.2",
-    "gatsby-remark-images": "^3.3.33",
+    "gatsby-remark-images": "^3.3.35",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-source-filesystem": "^2.3.30",
-    "gatsby-transformer-remark": "^2.8.38",
+    "gatsby-transformer-remark": "^2.8.42",
     "gatsby-transformer-sharp": "^2.5.15",
     "netlify-cms-app": "^2.12.27",
-    "prismjs": "^1.21.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-final-form": "^6.5.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.9.2",
-    "react-netlify-identity-widget": "^0.2.7",
     "styled-components": "^5.2.0",
-    "yup": "^0.29.3",
-    "yup-phone": "^1.2.10"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/eslint": "^7.2.3",
