--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-transformer-remark": "^2.8.42",
     "gatsby-transformer-sharp": "^2.5.15",
     "netlify-cms-app": "^2.12.27",
+    "nuka-carousel": "^4.7.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
