--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby": "^2.24.80",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
+    "gatsby-plugin-google-analytics": "^2.3.19",
     "gatsby-plugin-manifest": "^2.4.30",
     "gatsby-plugin-netlify": "^2.3.16",
     "gatsby-plugin-netlify-cache": "^1.2.0",
