--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.9.2",
+    "react-modal": "^3.11.2",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
   },
