--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-styled-components": "^1.11.1",
     "babel-preset-gatsby": "^0.5.12",
     "esm": "^3.2.25",
+    "fontsource-nunito": "^4.0.0",
     "gatsby": "^2.24.80",
     "gatsby-background-image": "^1.1.2",
     "gatsby-image": "^2.4.19",
@@ -19,7 +20,6 @@
     "gatsby-plugin-netlify-cache": "^1.2.0",
     "gatsby-plugin-netlify-cms": "^4.3.14",
     "gatsby-plugin-offline": "^3.2.28",
-    "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.3.11",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.3",
